expanded.rs

#[automatically_derived]
impl ::core::marker::Copy for __sFILE {}
#[automatically_derived]
impl ::core::clone::Clone for __sFILE {
    #[inline]
    fn clone(&self) -> __sFILE {
        let _: ::core::clone::AssertParamIsClone<*mut ::libc::c_uchar>;
        let _: ::core::clone::AssertParamIsClone<::libc::c_int>;
        let _: ::core::clone::AssertParamIsClone<::libc::c_int>;
        let _: ::core::clone::AssertParamIsClone<::libc::c_short>;
        let _: ::core::clone::AssertParamIsClone<::libc::c_short>;
        let _: ::core::clone::AssertParamIsClone<__sbuf>;
        let _: ::core::clone::AssertParamIsClone<::libc::c_int>;
        let _: ::core::clone::AssertParamIsClone<*mut ::libc::c_void>;
        let _: ::core::clone::AssertParamIsClone<
            ::core::option::Option<
                unsafe extern "C" fn(arg1: *mut ::libc::c_void) -> ::libc::c_int,
            >,
        >;
        let _: ::core::clone::AssertParamIsClone<
            ::core::option::Option<
                unsafe extern "C" fn(
                    arg1: *mut ::libc::c_void,
                    arg2: *mut ::libc::c_char,
                    arg3: ::libc::c_int,
                ) -> ::libc::c_int,
            >,
        >;
        let _: ::core::clone::AssertParamIsClone<
            ::core::option::Option<
                unsafe extern "C" fn(
                    arg1: *mut ::libc::c_void,
                    arg2: fpos_t,
                    arg3: ::libc::c_int,
                ) -> fpos_t,
            >,
        >;
        let _: ::core::clone::AssertParamIsClone<
            ::core::option::Option<
                unsafe extern "C" fn(
                    arg1: *mut ::libc::c_void,
                    arg2: *const ::libc::c_char,
                    arg3: ::libc::c_int,
                ) -> ::libc::c_int,
            >,
        >;
        let _: ::core::clone::AssertParamIsClone<*mut __sFILEX>;
        let _: ::core::clone::AssertParamIsClone<::libc::c_int>;
        let _: ::core::clone::AssertParamIsClone<[::libc::c_uchar; 3usize]>;
        let _: ::core::clone::AssertParamIsClone<[::libc::c_uchar; 1usize]>;
        let _: ::core::clone::AssertParamIsClone<::libc::c_int>;
        let _: ::core::clone::AssertParamIsClone<fpos_t>;
        *self
    }
}
pub type FILE = __sFILE;
extern "C" {
    pub static janet_type_names: [*const ::libc::c_char; 16usize];
}
extern "C" {
    pub static janet_signal_names: [*const ::libc::c_char; 14usize];
}
extern "C" {
    pub static janet_status_names: [*const ::libc::c_char; 16usize];
}
pub type JanetHandle = ::libc::c_int;
pub const JanetSignal_JANET_SIGNAL_OK: JanetSignal = 0;
pub const JanetSignal_JANET_SIGNAL_ERROR: JanetSignal = 1;
pub const JanetSignal_JANET_SIGNAL_DEBUG: JanetSignal = 2;
pub const JanetSignal_JANET_SIGNAL_YIELD: JanetSignal = 3;
pub const JanetSignal_JANET_SIGNAL_USER0: JanetSignal = 4;
pub const JanetSignal_JANET_SIGNAL_USER1: JanetSignal = 5;
pub const JanetSignal_JANET_SIGNAL_USER2: JanetSignal = 6;
pub const JanetSignal_JANET_SIGNAL_USER3: JanetSignal = 7;
pub const JanetSignal_JANET_SIGNAL_USER4: JanetSignal = 8;
pub const JanetSignal_JANET_SIGNAL_USER5: JanetSignal = 9;
pub const JanetSignal_JANET_SIGNAL_USER6: JanetSignal = 10;
pub const JanetSignal_JANET_SIGNAL_USER7: JanetSignal = 11;
pub const JanetSignal_JANET_SIGNAL_USER8: JanetSignal = 12;
pub const JanetSignal_JANET_SIGNAL_USER9: JanetSignal = 13;
pub type JanetSignal = ::libc::c_uint;
pub const JanetFiberStatus_JANET_STATUS_DEAD: JanetFiberStatus = 0;
pub const JanetFiberStatus_JANET_STATUS_ERROR: JanetFiberStatus = 1;
pub const JanetFiberStatus_JANET_STATUS_DEBUG: JanetFiberStatus = 2;
pub const JanetFiberStatus_JANET_STATUS_PENDING: JanetFiberStatus = 3;
pub const JanetFiberStatus_JANET_STATUS_USER0: JanetFiberStatus = 4;
pub const JanetFiberStatus_JANET_STATUS_USER1: JanetFiberStatus = 5;
pub const JanetFiberStatus_JANET_STATUS_USER2: JanetFiberStatus = 6;
pub const JanetFiberStatus_JANET_STATUS_USER3: JanetFiberStatus = 7;
pub const JanetFiberStatus_JANET_STATUS_USER4: JanetFiberStatus = 8;
pub const JanetFiberStatus_JANET_STATUS_USER5: JanetFiberStatus = 9;
pub const JanetFiberStatus_JANET_STATUS_USER6: JanetFiberStatus = 10;
pub const JanetFiberStatus_JANET_STATUS_USER7: JanetFiberStatus = 11;
pub const JanetFiberStatus_JANET_STATUS_USER8: JanetFiberStatus = 12;
pub const JanetFiberStatus_JANET_STATUS_USER9: JanetFiberStatus = 13;
pub const JanetFiberStatus_JANET_STATUS_NEW: JanetFiberStatus = 14;
pub const JanetFiberStatus_JANET_STATUS_ALIVE: JanetFiberStatus = 15;
pub type JanetFiberStatus = ::libc::c_uint;
#[repr(C)]
pub struct JanetVM {
    _unused: [u8; 0],
}
#[automatically_derived]
impl ::core::fmt::Debug for JanetVM {
    fn fmt(&self, f: &mut ::core::fmt::Formatter) -> ::core::fmt::Result {
        ::core::fmt::Formatter::debug_struct_field1_finish(
            f,
            "JanetVM",
            "_unused",
            &&self._unused,
        )
    }
}
#[automatically_derived]
impl ::core::marker::Copy for JanetVM {}
#[automatically_derived]
impl ::core::clone::Clone for JanetVM {
    #[inline]
    fn clone(&self) -> JanetVM {
        let _: ::core::clone::AssertParamIsClone<[u8; 0]>;
        *self
    }
}
pub const JanetType_JANET_NUMBER: JanetType = 0;
pub const JanetType_JANET_NIL: JanetType = 1;
pub const JanetType_JANET_BOOLEAN: JanetType = 2;
pub const JanetType_JANET_FIBER: JanetType = 3;
pub const JanetType_JANET_STRING: JanetType = 4;
pub const JanetType_JANET_SYMBOL: JanetType = 5;
pub const JanetType_JANET_KEYWORD: JanetType = 6;
pub const JanetType_JANET_ARRAY: JanetType = 7;
pub const JanetType_JANET_TUPLE: JanetType = 8;
pub const JanetType_JANET_TABLE: JanetType = 9;
pub const JanetType_JANET_STRUCT: JanetType = 10;
pub const JanetType_JANET_BUFFER: JanetType = 11;
pub const JanetType_JANET_FUNCTION: JanetType = 12;
pub const JanetType_JANET_CFUNCTION: JanetType = 13;
pub const JanetType_JANET_ABSTRACT: JanetType = 14;
pub const JanetType_JANET_POINTER: JanetType = 15;
pub type JanetType = ::libc::c_uint;
#[repr(C)]
pub struct Janet {
    pub as_: Janet__bindgen_ty_1,
    pub type_: JanetType,
}
#[automatically_derived]
impl ::core::marker::Copy for Janet {}
#[automatically_derived]
impl ::core::clone::Clone for Janet {
    #[inline]
    fn clone(&self) -> Janet {
        let _: ::core::clone::AssertParamIsClone<Janet__bindgen_ty_1>;
        let _: ::core::clone::AssertParamIsClone<JanetType>;
        *self
    }
}
#[repr(C)]
pub union Janet__bindgen_ty_1 {
    pub u64_: u64,
    pub number: f64,
    pub integer: i32,
    pub pointer: *mut ::libc::c_void,
    pub cpointer: *const ::libc::c_void,
}
#[automatically_derived]
impl ::core::marker::Copy for Janet__bindgen_ty_1 {}
#[automatically_derived]
impl ::core::clone::Clone for Janet__bindgen_ty_1 {
    #[inline]
    fn clone(&self) -> Janet__bindgen_ty_1 {
        let _: ::core::clone::AssertParamIsCopy<Self>;
        *self
    }
}
pub type JanetCFunction = ::core::option::Option<
    unsafe extern "C" fn(argc: i32, argv: *mut Janet) -> Janet,
>;
pub type JanetString = *const u8;
pub type JanetSymbol = *const u8;
pub type JanetKeyword = *const u8;
pub type JanetTuple = *const Janet;
pub type JanetStruct = *const JanetKV;
pub type JanetAbstract = *mut ::libc::c_void;
pub const JanetAsyncEvent_JANET_ASYNC_EVENT_INIT: JanetAsyncEvent = 0;
pub const JanetAsyncEvent_JANET_ASYNC_EVENT_MARK: JanetAsyncEvent = 1;
pub const JanetAsyncEvent_JANET_ASYNC_EVENT_DEINIT: JanetAsyncEvent = 2;
pub const JanetAsyncEvent_JANET_ASYNC_EVENT_CLOSE: JanetAsyncEvent = 3;
pub const JanetAsyncEvent_JANET_ASYNC_EVENT_ERR: JanetAsyncEvent = 4;
pub const JanetAsyncEvent_JANET_ASYNC_EVENT_HUP: JanetAsyncEvent = 5;
pub const JanetAsyncEvent_JANET_ASYNC_EVENT_READ: JanetAsyncEvent = 6;
pub const JanetAsyncEvent_JANET_ASYNC_EVENT_WRITE: JanetAsyncEvent = 7;
pub const JanetAsyncEvent_JANET_ASYNC_EVENT_CANCEL: JanetAsyncEvent = 8;
pub const JanetAsyncEvent_JANET_ASYNC_EVENT_COMPLETE: JanetAsyncEvent = 9;
pub const JanetAsyncEvent_JANET_ASYNC_EVENT_USER: JanetAsyncEvent = 10;
pub type JanetAsyncEvent = ::libc::c_uint;
pub const JanetAsyncStatus_JANET_ASYNC_STATUS_NOT_DONE: JanetAsyncStatus = 0;
pub const JanetAsyncStatus_JANET_ASYNC_STATUS_DONE: JanetAsyncStatus = 1;
pub type JanetAsyncStatus = ::libc::c_uint;
pub type JanetListener = ::core::option::Option<
    unsafe extern "C" fn(
        state: *mut JanetListenerState,
        event: JanetAsyncEvent,
    ) -> JanetAsyncStatus,
>;
#[repr(C)]
pub struct JanetStream {
    pub handle: JanetHandle,
    pub flags: u32,
    pub state: *mut JanetListenerState,
    pub methods: *const ::libc::c_void,
    pub _mask: ::libc::c_int,
}
#[automatically_derived]
impl ::core::fmt::Debug for JanetStream {
    fn fmt(&self, f: &mut ::core::fmt::Formatter) -> ::core::fmt::Result {
        ::core::fmt::Formatter::debug_struct_field5_finish(
            f,
            "JanetStream",
            "handle",
            &&self.handle,
            "flags",
            &&self.flags,
            "state",
            &&self.state,
            "methods",
            &&self.methods,
            "_mask",
            &&self._mask,
        )
    }
}
#[automatically_derived]
impl ::core::marker::Copy for JanetStream {}
#[automatically_derived]
impl ::core::clone::Clone for JanetStream {
    #[inline]
    fn clone(&self) -> JanetStream {
        let _: ::core::clone::AssertParamIsClone<JanetHandle>;
        let _: ::core::clone::AssertParamIsClone<u32>;
        let _: ::core::clone::AssertParamIsClone<*mut JanetListenerState>;
        let _: ::core::clone::AssertParamIsClone<*const ::libc::c_void>;
        let _: ::core::clone::AssertParamIsClone<::libc::c_int>;
        *self
    }
}
#[repr(C)]
pub struct JanetListenerState {
    pub machine: JanetListener,
    pub fiber: *mut JanetFiber,
    pub stream: *mut JanetStream,
    pub event: *mut ::libc::c_void,
    pub _index: usize,
    pub _mask: ::libc::c_int,
    pub _next: *mut JanetListenerState,
}
#[automatically_derived]
impl ::core::fmt::Debug for JanetListenerState {
    fn fmt(&self, f: &mut ::core::fmt::Formatter) -> ::core::fmt::Result {
        let names: &'static _ = &[
            "machine",
            "fiber",
            "stream",
            "event",
            "_index",
            "_mask",
            "_next",
        ];
        let values: &[&dyn ::core::fmt::Debug] = &[
            &&self.machine,
            &&self.fiber,
            &&self.stream,
            &&self.event,
            &&self._index,
            &&self._mask,
            &&self._next,
        ];
        ::core::fmt::Formatter::debug_struct_fields_finish(
            f,
            "JanetListenerState",
            names,
            values,
        )
    }
}
#[automatically_derived]
impl ::core::marker::Copy for JanetListenerState {}
#[automatically_derived]
impl ::core::clone::Clone for JanetListenerState {
    #[inline]
    fn clone(&self) -> JanetListenerState {
        let _: ::core::clone::AssertParamIsClone<JanetListener>;
        let _: ::core::clone::AssertParamIsClone<*mut JanetFiber>;
        let _: ::core::clone::AssertParamIsClone<*mut JanetStream>;
        let _: ::core::clone::AssertParamIsClone<*mut ::libc::c_void>;
        let _: ::core::clone::AssertParamIsClone<usize>;
        let _: ::core::clone::AssertParamIsClone<::libc::c_int>;
        let _: ::core::clone::AssertParamIsClone<*mut JanetListenerState>;
        *self
    }
}
extern "C" {
    /// START SECTION NON-C API
    pub fn janet_struct_head(st: *const JanetKV) -> *mut JanetStructHead;
}
extern "C" {
    pub fn janet_abstract_head(
        abstract_: *const ::libc::c_void,
    ) -> *mut JanetAbstractHead;
}
extern "C" {
    pub fn janet_string_head(s: *const u8) -> *mut JanetStringHead;
}
extern "C" {
    pub fn janet_tuple_head(tuple: *const Janet) -> *mut JanetTupleHead;
}
extern "C" {
    pub fn janet_type(x: Janet) -> JanetType;
}
